exports[`<UserPopup add snapshot 1`] = `
<div
  className="modal-content user-add-popup">
  <div
    className="modal-header">
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      onClick={[Function]}
      type="button">
      <span
        aria-hidden="true">
        ×
      </span>
    </button>
    <h4
      className="modal-title">
      添加用户
    </h4>
  </div>
  <div
    className="modal-body">
    <div
      className="form-group row basic-info">
      <div
        className="inputCheck ">
        <label
          className="control-label">
          <span>
            permission.username
          </span>
          :
        </label>
        <div
          className="has-feedback ">
          <input
            className="form-control"
            disabled={false}
            id="username"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder=""
            type="text"
            value="" />
          <span
            aria-hidden="true"
            className="glyphicon  form-control-feedback" />
          <span
            className="reminder">
            
          </span>
        </div>
      </div>
      <div
        className="inputCheck">
        <label
          className="control-label">
          <span>
            permission.grade
          </span>
          :
        </label>
        <div
          className="has-feedback">
          <select
            className="select role form-control"
            id=""
            onChange={[Function]}
            placeholder="无"
            value="" />
          <span
            aria-hidden="true"
            className="glyphicon  form-control-feedback" />
          <span
            className="reminder" />
        </div>
      </div>
      <div
        className="inputCheck ">
        <label
          className="control-label">
          <span>
            permission.lastname
          </span>
          :
        </label>
        <div
          className="has-feedback ">
          <input
            className="form-control"
            disabled={false}
            id="lastName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder=""
            type="text"
            value="" />
          <span
            aria-hidden="true"
            className="glyphicon  form-control-feedback" />
          <span
            className="reminder">
            
          </span>
        </div>
      </div>
      <div
        className="inputCheck ">
        <label
          className="control-label">
          <span>
            permission.firstname
          </span>
          :
        </label>
        <div
          className="has-feedback ">
          <input
            className="form-control"
            disabled={false}
            id="firstName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder=""
            type="text"
            value="" />
          <span
            aria-hidden="true"
            className="glyphicon  form-control-feedback" />
          <span
            className="reminder">
            
          </span>
        </div>
      </div>
      <div
        className="inputCheck ">
        <label
          className="control-label">
          <span>
            permission.password
          </span>
          :
        </label>
        <div
          className="has-feedback ">
          <input
            className="form-control"
            disabled={false}
            id="password"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder=""
            type="password"
            value="" />
          <span
            aria-hidden="true"
            className="glyphicon  form-control-feedback" />
          <span
            className="reminder">
            
          </span>
        </div>
      </div>
      <div
        className="inputCheck ">
        <label
          className="control-label">
          <span>
            permission.repassword
          </span>
          :
        </label>
        <div
          className="has-feedback ">
          <input
            className="form-control"
            disabled={false}
            id="rePassword"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder=""
            type="password"
            value="" />
          <span
            aria-hidden="true"
            className="glyphicon  form-control-feedback" />
          <span
            className="reminder">
            
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="modal-footer">
    <button
      className="btn btn-default"
      disabled={false}
      onClick={[Function]}
      type="button">
      <span>
        button.cancel
      </span>
    </button>
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="button">
      <span>
        button.confirm
      </span>
    </button>
  </div>
</div>
`;

exports[`<UserPopup edit snapshot 1`] = `
<div
  className="modal-content user-edit-popup">
  <div
    className="modal-header">
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      onClick={[Function]}
      type="button">
      <span
        aria-hidden="true">
        ×
      </span>
    </button>
    <h4
      className="modal-title">
      用户资料
    </h4>
  </div>
  <div
    className="modal-body">
    <div
      className="form-group row basic-info">
      <div
        className="inputCheck ">
        <label
          className="control-label">
          <span>
            permission.username
          </span>
          :
        </label>
        <div
          className="has-feedback ">
          <input
            className="form-control"
            disabled={false}
            id="username"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder=""
            type="text"
            value="" />
          <span
            aria-hidden="true"
            className="glyphicon  form-control-feedback" />
          <span
            className="reminder">
            
          </span>
        </div>
      </div>
      <div
        className="inputCheck">
        <label
          className="control-label">
          <span>
            permission.grade
          </span>
          :
        </label>
        <div
          className="has-feedback">
          <select
            className="select role form-control"
            id=""
            onChange={[Function]}
            placeholder="无"
            value="" />
          <span
            aria-hidden="true"
            className="glyphicon  form-control-feedback" />
          <span
            className="reminder" />
        </div>
      </div>
      <div
        className="inputCheck ">
        <label
          className="control-label">
          <span>
            permission.lastname
          </span>
          :
        </label>
        <div
          className="has-feedback ">
          <input
            className="form-control"
            disabled={false}
            id="lastName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder=""
            type="text"
            value="" />
          <span
            aria-hidden="true"
            className="glyphicon  form-control-feedback" />
          <span
            className="reminder">
            
          </span>
        </div>
      </div>
      <div
        className="inputCheck ">
        <label
          className="control-label">
          <span>
            permission.firstname
          </span>
          :
        </label>
        <div
          className="has-feedback ">
          <input
            className="form-control"
            disabled={false}
            id="firstName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder=""
            type="text"
            value="" />
          <span
            aria-hidden="true"
            className="glyphicon  form-control-feedback" />
          <span
            className="reminder">
            
          </span>
        </div>
      </div>
      <div
        className="inputCheck ">
        <label
          className="control-label">
          <span>
            permission.password
          </span>
          :
        </label>
        <div
          className="has-feedback ">
          <input
            className="form-control"
            disabled={false}
            id="password"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder=""
            type="password"
            value="" />
          <span
            aria-hidden="true"
            className="glyphicon  form-control-feedback" />
          <span
            className="reminder">
            
          </span>
        </div>
      </div>
      <div
        className="inputCheck ">
        <label
          className="control-label">
          <span>
            permission.repassword
          </span>
          :
        </label>
        <div
          className="has-feedback ">
          <input
            className="form-control"
            disabled={false}
            id="rePassword"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder=""
            type="password"
            value="" />
          <span
            aria-hidden="true"
            className="glyphicon  form-control-feedback" />
          <span
            className="reminder">
            
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="modal-footer">
    <button
      className="btn btn-default"
      disabled={false}
      onClick={[Function]}
      type="button">
      <span>
        button.cancel
      </span>
    </button>
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="button">
      <span>
        button.confirm
      </span>
    </button>
  </div>
</div>
`;
